Created basic play.html
The server responds to a share url request by displaying play.html and
returning an id that the client can use to specify which user's queue
they are adding to. The id is a sha256 hash of the user's email. This
will need to be changed.

--- a/public/play.html
+++ b/public/play.html
@@ -7,16 +7,14 @@
   <title>Spotify Party</title>
 </head>
 <body class="bg-dark">
-  <div class="container bg-primary h-100">
-    <div class="row text-center pt-5 align-items-center">
-      <div class="col">
-        <input type="text" class="form-control">
-      </div>
-      
-      <div class="col-1 text-start">
-        <button id="search" class="btn btn-light">
-          <img class="img-fluid"src="img/search.svg" alt="">
-        </button>
+  <div class="container h-100">
+    <div class="row mt-5">
+      <div class="col-md-6 mx-auto">
+        <div class="input-group">
+          <input type="text" id="search-input" class="form-control" placeholder="Search Tracks">
+          <button class="btn btn-outline-primary" id="search-btn" type="button">Search</button>
+          </span>
+        </div>
       </div>
     </div>
   </div>
