Updated index.html color scheme

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <title>Spotify Party</title>
 </head>
-<body class="bg-dark">
+<body class="bg-light">
   <div class="container-fluid bg-dark" id="main">
     <div class="row align-items-center" id="top-bar">
       <div class="col-1">
@@ -17,9 +17,9 @@
       </div>
     </div>
 
-    <div class="row bg-primary align-items-center text-center" id="loginRow">
+    <div class="row bg-light align-items-center text-center" id="loginRow">
       <div class="col">
-        <div class="container bg-dark p-5 rounded-3">
+        <div class="container p-5 rounded-3">
           <div class="row p-5">
             <div class="col">
               <button class="btn btn-primary btn-lg w-100">Join a Party</button>
@@ -28,7 +28,7 @@
           <div class="row p-5 pt-1">
             <div class="col">
               <a href="http://localhost:8888/start">
-                <button id="start-btn" class="btn btn-outline-primary btn-sm w-75">Or Start Your Own</button>
+                <button id="start-btn" class="btn btn-outline-dark btn-sm w-75">Or Start Your Own</button>
               </a>
             </div>
           </div>
