--- a/public/play.html
+++ b/public/play.html
@@ -7,7 +7,7 @@
   <title>Spotify Party</title>
 </head>
 <body class="bg-dark">
-  <div class="container h-100">
+  <div class="container h-100" id="body-container">
     <div class="row mt-5">
       <div class="col-md-6 mx-auto">
         <div class="input-group">
