--- a/public/play.html
+++ b/public/play.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-dark">
   <div class="container h-100" id="body-container">
-    <div class="row mt-5">
+    <div class="row mt-5 mb-5">
       <div class="col-md-6 mx-auto">
         <div class="input-group">
           <input type="text" id="search-input" class="form-control" placeholder="Search Tracks">
