removed join party button and added end party button

--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,18 @@
 
     <div class="row bg-light align-items-center text-center" id="loginRow">
       <div class="col">
-        <div class="container p-5 rounded-3">
+        <div id="button-container" class="container p-5 rounded-3">
           <div class="row p-5">
             <div class="col">
-              <button class="btn btn-primary btn-lg w-100">Join a Party</button>
+              <a href="http://localhost:8888/start">
+                <button class="btn btn-primary btn-lg w-100">Start a Party</button>
+              </a>
             </div>
           </div>
           <div class="row p-5 pt-1">
             <div class="col">
-              <a href="http://localhost:8888/start">
-                <button id="start-btn" class="btn btn-outline-dark btn-sm w-75">Or Start Your Own</button>
+              <a href="http://localhost:8888/end">
+                <button id="start-btn" class="btn btn-outline-dark btn-sm w-75">End a Party</button>
               </a>
             </div>
           </div>
