disabled end party button

--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,13 @@
           <div class="row p-5">
             <div class="col">
               <a href="http://localhost:8888/start">
-                <button class="btn btn-primary btn-lg w-100">Start a Party</button>
+                <button class="btn start-button btn-primary btn-lg w-100">Start a Party</button>
               </a>
             </div>
           </div>
           <div class="row p-5 pt-1">
             <div class="col">
-              <a href="http://localhost:8888/end">
-                <button id="start-btn" class="btn btn-outline-dark btn-sm w-75">End a Party</button>
-              </a>
+              <button id="end-btn" class="btn btn-outline-dark btn-sm w-75">End a Party</button>
             </div>
           </div>
         </div>
