--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <div id="button-container" class="container p-5 rounded-3">
           <div class="row p-5">
             <div class="col">
-              <button class="btn start-button btn-primary btn-lg w-100">Start a Party</button>
+              <button id="start-button" class="btn btn-primary btn-lg w-100">Start a Party</button>
             </div>
           </div>
           <div class="row p-5 pt-1">
